# systemRecorder

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  dsp.rs  main.rs  wasapi.rs
src/wasapi/: capture.rs  devices.rs  sessions.rs
